<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".Admin_Home">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_books"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btn_books"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="384dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#540022"
        android:text="@string/btn_Books"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_movies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.379"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_movies"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#540022"
        android:text="@string/btn_Movies"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_tvshows"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_books" />

    <Button
        android:id="@+id/btn_tvshows"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#540022"
        android:text="@string/btn_Tvshows"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_movies" />

</androidx.constraintlayout.widget.ConstraintLayout>