<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colors_kenuri"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_App"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tv_App"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#370016"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/et_Username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corner"
        android:drawableRight="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/et_Password"
        android:inputType="textPassword"
        android:paddingStart="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Username" />

    <EditText
        android:id="@+id/et_Username"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/et_Username"
        android:inputType="textPersonName"
        android:paddingStart="18sp"
        android:textAlignment="viewStart"
        android:textColorLink="#000000"
        android:textCursorDrawable="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_App" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/p3" />

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#540022"
        android:onClick="userLogin"
        android:text="@string/btn_Signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <Button
        android:id="@+id/btn_Register"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="68dp"
        android:onClick="register"
        android:text="@string/btn_Register"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="30dp"
        android:text="@string/tv_Register"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@color/cardview_dark_background"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>