<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/colors_kenuri"
    tools:context=".AdminLogin">

    <TextView
        android:id="@+id/tv_AApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/tv_App"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#370016"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_AdminLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <EditText
        android:id="@+id/et_Apassword"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_corner"
        android:drawableRight="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/et_Password"
        android:inputType="textPassword"
        android:paddingStart="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_AUsername" />

    <EditText
        android:id="@+id/et_AUsername"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:hint="@string/et_Username"
        android:inputType="textPersonName"
        android:paddingStart="18sp"
        android:textAlignment="viewStart"
        android:textColorLink="#000000"
        android:textCursorDrawable="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/et_Apassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_AdminLogin" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:srcCompat="@drawable/p3" />

    <Button
        android:id="@+id/btn_Asignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#540022"
        android:onClick="adminLogin"
        android:text="@string/btn_Signin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Apassword" />


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_AdminLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/tv_AdminLogin"
        android:textColor="@color/maroon"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_AUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_AApp" />

</androidx.constraintlayout.widget.ConstraintLayout>